force-app/main/default/objects/Committee_Contribution__c/Committee_Contribution__c.object-meta.xml
<CustomObject>
    <label>Committee Contribution</label>
    <nameField>
        <displayFormat>CMT-{0000000}</displayFormat>
        <label>Committee Contributions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>