force-app/main/default/objects/Committee_Contribution__c/fields/CAND_ID__c.field-meta.xml
<CustomField>
    <fullName>CAND_ID__c</fullName>
    <description>Candidate ID.</description>
    <inlineHelpText>OpenFEC Candidate ID</inlineHelpText>
    <label>CAND ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>