force-app/main/default/objects/Committee_Contribution__c/fields/CMTE_ID__c.field-meta.xml
<CustomField>
    <fullName>CMTE_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>OpenFEC Committee ID</description>
    <externalId>true</externalId>
    <label>CMTE ID</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>