force-app/main/default/objects/Committee_Contribution__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Committee member&apos;s matched contact record.</description>
    <inlineHelpText>Committee member&apos;s matched contact record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Committee Contributions</relationshipLabel>
    <relationshipName>Committee_Contributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>