force-app/main/default/objects/Committee_Contribution__c/fields/Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Import_Date__c</fullName>
    <label>Import Date</label>
    <type>DateTime</type>
</CustomField>