force-app/main/default/objects/Committee_Contribution__c/fields/Matched__c.field-meta.xml
<CustomField>
    <fullName>Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matched</label>
    <type>Checkbox</type>
</CustomField>